tests/errors/macro-token-tree-planned.ari
meta fn quote(input: token_stream) -> token_stream {
}

fn main() -> i64 {
  let quoted = quote!(fn ~(name)(~(args)) -> i64 {
    return ~(body);
  });
  return 0;
}
